Add Login Controller

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@page
+﻿
+<h1>Login Page</h1>
+@*@page
 @model LoginModel
 
 @{
@@ -83,3 +85,4 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+*@
