--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -16,18 +16,18 @@
                 <h2>Use a local account to log in.</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
+                <div class="form-floating mb-2" >
                     <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" />
                     <label asp-for="Email" class="form-label"></label>
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
-                <div class="form-floating">
+                <div class="form-floating mb-2">
                     <input asp-for="Password" class="form-control" autocomplete="current-password" aria-required="true" />
                     <label asp-for="Password" class="form-label"></label>
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
                 <div>
-                    <div class="checkbox">
+                    <div class="checkbox ">
                         <label asp-for="RememberMe" class="form-label">
                             <input class="form-check-input" asp-for="RememberMe" />
                             @Html.DisplayNameFor(m => m.RememberMe)
