--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary" >Se connecter</button>
                 </div>
                @*  <div>
                     <p>
