--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -5,16 +5,14 @@
 
 @{
     ViewData["Title"] = "Log in";
-    var x = "test";
 }
 
 <h1>@ViewData["Title"]</h1>
-<div style="margin:auto;">
+<div style="">
     <div class="row">
         <div class="col-md-4">
             <section>
                 <form id="account" method="post">
-                    <h2>Se Connecter</h2>
                     <hr />
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-floating mb-2">
