Ajout de la traduction dans la page d'election

--- a/Views/Election/Create.cshtml
+++ b/Views/Election/Create.cshtml
@@ -1,3 +1,6 @@
-﻿
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
 
-<h1>Create an Election</h1>
+@inject IViewLocalizer _localizer;
+
+
+<h1>@_localizer["CreateTitle"]</h1>
