--- a/Views/Shared/_SelectedLanguePartial.cshtml
+++ b/Views/Shared/_SelectedLanguePartial.cshtml
@@ -26,7 +26,7 @@
 }
 
 <div>
-	<form asp-action="ChangeLanguage" asp-controller="ManageOtherRequest" method="post" asp-route-returnUrl="@returnUrl">
+	<form asp-action="ChangeLanguage" asp-controller="Home" method="post" asp-route-returnUrl="@returnUrl">
 		<select name="culture" asp-for="@culture.RequestCulture.UICulture.Name" asp-items="cultureLst" onchange="this.form.submit();">
 
 		</select>
