--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,10 +1,13 @@
 ﻿@using Vote_Application_JonathanMutala.ViewModel;
+@using Microsoft.AspNetCore.Mvc.Localization;
+
+
 
 @model LoginViewModel
-
+@inject IViewLocalizer _localizer;
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = _localizer["LogInTitle"].Value;
 }
 
 
@@ -19,24 +22,24 @@
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-floating mb-2">
                             <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" />
-                            <label asp-for="Email" class="form-label"></label>
+                            <label asp-for="Email" class="form-label">@_localizer["Email"]</label>
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
                         <div class="form-floating mb-2">
                             <input asp-for="Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                            <label asp-for="Password" class="form-label"></label>
+                            <label asp-for="Password" class="form-label">@_localizer["Password"]</label>
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                         <div>
                             <div class="checkbox ">
                                 <label asp-for="RememberMe" class="form-label">
                                     <input class="form-check-input" asp-for="RememberMe" />
-                                    @Html.DisplayNameFor(m => m.RememberMe)
+                                   @_localizer["RememberMe"]
                                 </label>
                             </div>
                         </div>
                         <div>
-                            <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Se connecter</button>
+                            <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">@_localizer["LogIn"].Value</button>
                         </div>
                         @*  <div>
                         <p>
