--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer _localizer;
+
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
@@ -7,21 +10,21 @@
     @if (SignInManager.Context.User.Identity.IsAuthenticated)
 {
     <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"> @UserManager.GetUserName(User)!</a>
     </li>
     <li class="nav-item">
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-action="LogOut" asp-controller="Account" method="post" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button id="logout" type="submit" class="nav-link btn btn-link text-dark">@_localizer["Logout"]</button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-            <a class="nav-link text-dark" id="register"  style="cursor:pointer;" onclick="location.href='@Url.Action("Register", "Account")'">Register</a>
+            <a class="nav-link text-dark" id="register" style="cursor:pointer;" onclick="location.href='@Url.Action("Register", "Account")'">@_localizer["Register"]</a>
     </li>
     <li class="nav-item">
-            <a class="nav-link text-dark" id="login" style="cursor:pointer;" onclick="location.href='@Url.Action("Login", "Account")'">Login</a>
+            <a class="nav-link text-dark" id="login" style="cursor:pointer;" onclick="location.href='@Url.Action("Login", "Account")'">@_localizer["Login"]</a>
     </li>
 }
 </ul>
