Ajout de fichier Json pour le pays

--- a/Views/Election/Create.cshtml
+++ b/Views/Election/Create.cshtml
@@ -18,7 +18,7 @@
             <div class="col-lg-6">
                 <div class="form-floating mb-2">
                     <input class="form-control" aria-required="true" />
-                    <label class="form-label">@_localizer["Name"]</label>
+                    <label class="form-label">@_localizer["Description"]</label>
                 </div>
             </div>
         </div>
@@ -26,13 +26,13 @@
             <div class="col-lg-6">
                 <div class="form-floating mb-2">
                     <input class="form-control" aria-required="true" />
-                    <label class="form-label">@_localizer["Name"]</label>
+                    <label class="form-label">@_localizer["Country"]</label>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="form-floating mb-2">
                     <input class="form-control" aria-required="true" />
-                    <label class="form-label">@_localizer["Name"]</label>
+                    <label class="form-label">@_localizer["City"]</label>
                 </div>
             </div>
         </div>
@@ -40,13 +40,13 @@
             <div class="col-lg-6">
                 <div class="form-floating mb-2">
                     <input class="form-control" aria-required="true" />
-                    <label class="form-label">@_localizer["Name"]</label>
+                    <label class="form-label">@_localizer["Region"]</label>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="form-floating mb-2">
-                    <input class="form-control" aria-required="true" />
-                    <label class="form-label">@_localizer["Name"]</label>
+                    <input type="datetime-local" class="form-control" aria-required="true" />
+                    <label class="form-label">@_localizer["StartDate"]</label>
                 </div>
             </div>
         </div>
