Fix Create Election

--- a/Views/Election/Create.cshtml
+++ b/Views/Election/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@using Vote_Application_JonathanMutala.ViewModel;
 @inject IViewLocalizer _localizer;
 
 
@@ -9,46 +10,58 @@
             <h1>@_localizer["CreateTitle"]</h1>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-4">
                 <div class="form-floating mb-2">
                     <input class="form-control" aria-required="true" />
                     <label class="form-label">@_localizer["Name"]</label>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <div class="form-floating mb-2">
-                    <input class="form-control" aria-required="true" />
-                    <label class="form-label">@_localizer["Description"]</label>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="form-floating mb-2">
-                    <input class="form-control" aria-required="true" />
-                    <label class="form-label">@_localizer["Country"]</label>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="form-floating mb-2">
-                    <input class="form-control" aria-required="true" />
-                    <label class="form-label">@_localizer["City"]</label>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="form-floating mb-2">
-                    <input class="form-control" aria-required="true" />
-                    <label class="form-label">@_localizer["Region"]</label>
-                </div>
-            </div>
-            <div class="col-lg-6">
+            <div class="col-lg-4">
                 <div class="form-floating mb-2">
                     <input type="datetime-local" class="form-control" aria-required="true" />
                     <label class="form-label">@_localizer["StartDate"]</label>
                 </div>
             </div>
+            <div class="col-lg-4">
+                <div class="form-floating mb-2">
+                    <input type="datetime-local" class="form-control" aria-required="true" />
+                    <label class="form-label">@_localizer["EndDate"]</label>
+                </div>
+            </div>
+          
+        </div>
+        <div class="row">
+            <div class="col-lg-4" style="margin-bottom:15px;">
+                
+                    <select class="form-select" id="country" name="country" style="height:100%;">
+                       
+                        @foreach (var country in ViewBag.Countries)
+                        {
+                            <option value="@country.Code">@country.Name</option>
+                        }
+                    </select>                  
+            </div>
+            <div class="col-lg-4">
+                <div class="form-floating mb-2">
+                    <input class="form-control" aria-required="true" />
+                    <label class="form-label">@_localizer["City"]</label>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="form-floating mb-2">
+                    <input class="form-control" aria-required="true" />
+                    <label class="form-label">@_localizer["Region"]</label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="form-floating mb-2">
+                    <textarea class="form-control" aria-required="true"></textarea>
+                    <label class="form-label">@_localizer["Description"]</label>
+                </div>
+            </div>
+           
         </div>
         
     </div>
