--- a/Views/Election/Create.cshtml
+++ b/Views/Election/Create.cshtml
@@ -18,13 +18,13 @@
             </div>
             <div class="col-lg-4">
                 <div class="form-floating mb-2">
-                    <input type="datetime-local" class="form-control" aria-required="true" />
+                    <input type="datetime-local" class="form-control" aria-required="true" value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm")" />
                     <label class="form-label">@_localizer["StartDate"]</label>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="form-floating mb-2">
-                    <input type="datetime-local" class="form-control" aria-required="true" />
+                    <input type="datetime-local" class="form-control" aria-required="true" value="@DateTime.Now.AddHours(1).ToString("yyyy-MM-dd HH:mm")" />
                     <label class="form-label">@_localizer["EndDate"]</label>
                 </div>
             </div>
