--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -17,6 +17,10 @@
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark">@_localizer["Logout"]</button>
         </form>
     </li>
+    <li class="nav-item">
+
+        <a class="bi bi-gear" asp-controller="Parameter" asp-action="Index" style="cursor:pointer;"></a>
+    </li>
 }
 else
 {
