--- a/Views/Parameter/ManageRole.cshtml
+++ b/Views/Parameter/ManageRole.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Roles>;
+﻿@model List<Role>;
 
 <h1>
     Manage Role 
@@ -8,7 +8,9 @@
 
 <br />
 <br />
-<a asp-action="CreateRole" asp-controller="Parameter">Create a role</a>
+<p>
+    <a asp-action="CreateRole" asp-controller="Parameter">Create a role</a>
+</p>
 <table>
     <tr>
         <th>Name</th>
@@ -25,9 +27,9 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+              @*   @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id=item.Id })  |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                @Html.ActionLink("Delete", "Delete", new { id=item.Id }) *@
             </td>
         </tr>
     }
