--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top text-muted" style="position: absolute;bottom: 0;height: 100px; background-color:red;width:100%;"  >
         <div class="container">
             &copy; 2023 - Vote_Application_JonathanMutala - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
