--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -6,12 +6,86 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<div class="container">
+    <form id="registerForm" asp-route-returnUrl="@Model?.ReturnUrl" method="post">
+
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="form-floating mb-2">
+                    <input asp-for="FirstName" class="form-control" autocomplete="firstName" aria-required="true" />
+                    <label asp-for="FirstName"></label>
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="form-floating mb-2">
+                    <input asp-for="LastName" class="form-control" autocomplete="lastName" aria-required="true" />
+                    <label asp-for="LastName"></label>
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="form-floating mb-2">
+                    <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" />
+                    <label asp-for="Email"></label>
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="form-floating mb-2">
+                    <input asp-for="UserName" class="form-control" autocomplete="new-password" aria-required="true" />
+                    <label asp-for="UserName"></label>
+                    <span asp-validation-for="UserName" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="form-floating mb-2">
+                    <input asp-for="Password" class="form-control" autocomplete="new-password" aria-required="true" />
+                    <label asp-for="Password"></label>
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="form-floating mb-2">
+                    <input asp-for="ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                    <label asp-for="ConfirmPassword"></label>
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+        <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+    </form>
+   
+</div>
+
+
+
+
+
+
+
+
+
+
+
+@* 
+
 <div class="row">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model?.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
+           
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            
+
+
             <div class="form-floating mb-2" >
                 <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" />
                 <label asp-for="Email"></label>
@@ -33,10 +107,10 @@
                 <label asp-for="ConfirmPassword"></label>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+           
         </form>
     </div>
-  @*   <div class="col-md-6 col-md-offset-2">
+    <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to register.</h3>
             <hr />
@@ -65,8 +139,8 @@
                 }
             }
         </section>
-    </div> *@
-</div>
+    </div> 
+</div> *@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
